# postamt

./: .dockerignore  .env.dist  .flake8  .gitignore  DOCS.md  Dockerfile  INSTALLATION.md  LICENCE  Makefile  README.md  alembic.ini  alembic.ini.example  app.ini.example  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: linter_types.yml
app/: __main__.py  consts.py
app/core/commands/: command.py
app/core/filters/: chat_type.py
app/core/handlers/: error.py  factory.py
app/core/handlers/forum/: triggers.py
app/core/handlers/private_chat/: base.py  base_commands.py  email_auth.py
app/core/keyboards/: inline.py  reply.py
app/core/middlewares/: db.py  fernet_keys.py
app/core/navigations/: command.py
app/core/states/: base_menu.py  email_connection.py  email_register.py
app/entities/: base.py  email.py  topic.py  user.py
app/exceptions/: email.py  repo.py
app/locales/: bot.pot
app/locales/en/LC_MESSAGES/: bot.mo  bot.po
app/models/: email.py  topic.py  user.py
app/services/broker/: email_broker.py  emailbox_broker.py  serializer.py  topics.py
app/services/cryptography/: cryptographer.py
app/services/database/: connector.py
app/settings/: config.py  paths.py
app/utils/: config.py  paths.py  singleton.py
app/utils/config/: consts.py  entities.py  loader.py
migrations/: env.py
migrations/versions/: 0b731f2fc0a4_init.py  3f8934facabe_email_table.py  86854bb4b560_email_entity.py  bef5f7bdaaad_update_entities.py  d390f5346367_schemas_with_large_binary_fields_for_.py  e16e95dc67aa_emailbox_entity_update.py
(+11 files in other folders)
