[tool.poetry]
name = "postamt"
version = "0.1"
description = "Telegram Email client"
authors = ["Andrey Karchevsky <karych@karych.ru>"]

[tool.poetry.dependencies]
python = "^3.12"
greenlet = "*"
asyncpg = "^0.29.0"
sqlalchemy = "==2.0.25"
alembic = "==1.13.1"

[tool.poetry.dependencies.aiogram]
version = "^3.3.0"
extras = ["i18n"]

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.1.1"
pyright = "^1.1.349"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
reportUnnecessaryTypeIgnoreComment = "warning"