[tool.poetry]
name = "postamt"
version = "0.1"
description = "Telegram Email client"
authors = ["Andrey Karchevsky <karych@karych.ru>"]

[tool.poetry.dependencies]
python = "^3.12"
greenlet = "*"
asyncpg = "^0.29.0"
sqlalchemy = "==2.0.27"
alembic = "==1.13.1"
pydantic-settings = "==2.2.1"
cryptography = "^42.0.5"
aioimaplib = "==1.0.1"
email-validator = "^2.1.0.post1"
mail-parser = "==3.15.0"

[tool.poetry.dependencies.aiogram]
version = "^3.4.1"
extras = ["i18n"]

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.1.1"
pyright = "^1.1.351"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
reportUnnecessaryTypeIgnoreComment = "warning"
